WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263319
[CoordinatedGraphics] CompositingCoordinator doesn't need to implement GraphicsLayerClient
https://bugs.webkit.org/show_bug.cgi?id=263319
Summary
[CoordinatedGraphics] CompositingCoordinator doesn't need to implement Graphi...
Carlos Garcia Campos
Reported
2023-10-18 05:37:20 PDT
The compositing coordinator is passed as the client of the root layer, which doesn't have backing store and it's handled manually, so every time it changes we are already scheduling a layer flush.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-10-18 05:38:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19224
EWS
Comment 2
2023-10-19 02:11:24 PDT
Committed
269509@main
(5603d6693703): <
https://commits.webkit.org/269509@main
> Reviewed commits have been landed. Closing PR #19224 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug