[CoordinatedGraphics] CompositingCoordinator doesn't need to implement GraphicsLayerClient https://bugs.webkit.org/show_bug.cgi?id=263319

Reviewed by Alejandro G. Castro.

The compositing coordinator is passed as the client of the root layer,
which doesn't have backing store and it's handled manually, so every
time it changes we are already scheduling a layer flush.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CompositingCoordinator.cpp:
(WebKit::CompositingCoordinator::sizeDidChange):
(WebKit::CompositingCoordinator::notifyFlushRequired): Deleted.
(WebKit::CompositingCoordinator::deviceScaleFactor const): Deleted.
(WebKit::CompositingCoordinator::pageScaleFactor const): Deleted.
(WebKit::CompositingCoordinator::deviceOrPageScaleFactorChanged): Deleted.
(WebKit::CompositingCoordinator::renderNextFrame): Deleted.
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CompositingCoordinator.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::deviceOrPageScaleFactorChanged):
(WebKit::LayerTreeHost::renderNextFrame):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h:

Canonical link: https://commits.webkit.org/269509@main